# clipferry

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  codecov.yml  deny.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  aur.yml  ci.yml  release-plz.yml  snapshot.yml
contrib/: clipferry.service
contrib/aur/clipferry/: PKGBUILD
contrib/aur/clipferry-git/: PKGBUILD
crates/clipferry/: CHANGELOG.md  Cargo.toml
crates/clipferry/src/: app.rs  broker.rs  cli.rs  lib.rs  logging.rs  main.rs  mime.rs  payload.rs  sandbox.rs  transfer.rs  wayland.rs  x11.rs
crates/clipferry/tests/: sandbox.rs
