[package]
name = "clipferry"
description = "Lazy, event-driven X11 ⇄ Wayland clipboard bridge for xwayland-satellite setups"
readme = "../../README.md"
keywords = ["clipboard", "wayland", "x11", "niri", "xwayland"]
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

[lints]
workspace = true
