[package]
name = "clipferry"
description = "Lazy, event-driven X11 ⇄ Wayland clipboard bridge for xwayland-satellite setups"
readme = "../../README.md"
keywords = ["clipboard", "wayland", "x11", "niri", "xwayland"]
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.103"
calloop = "0.14.4"
calloop-wayland-source = "0.4.1"
lexopt = "0.3.2"
log = "0.4.33"
rustix = { version = "1.1.4", features = ["event"] }
wayland-client = "0.31.14"
wayland-protocols = { version = "0.32.12", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
x11rb = { version = "0.13.2", features = ["xfixes"] }
zeroize = "1.9.0"

[lints]
workspace = true
